# projects

./: .gitignore  readme.md  shell.nix
challenges/: readme.md
challenges/ainm2026/: CLAUDE.md  CODEX.md  main.py  main2.py  main3.py  readme.md  requirements.txt
challenges/knowit2024/: readme.md
challenges/knowit2025/: readme.md
fysikk1/: 3-66.py  ball_luftmotstand.py  bevaring-bevegelsesmengde.py  bevegelsesmengde.py  kule_fluidmotstand.py  luftmotstand.ipynb
golang/hello-world/: hello.go
golang/render-image/: go.mod  image.py  index.html  main.go
haskell/: basic_functions.hs  people.hs  relearn.hs
haskell/learnyouahaskell/: io.hs  random.hs  readme.md  rpn.hs
it1/2025-09-23/: index.html  styles.css
it1/2025-09-30/: index.html  styles.css
it1/2025-10-21/: draw-scene.js  index.html  init-buffers.js  readme.md  webgl-demo.js
it1/2025-10-24/: index.css  index.html  index.js  readme.md
it1/2025-11-04/: index.html  index.js  readme.md
it1/2025-12-05/: index.html  index.js
it1/2025-12-12/: index.css  index.html  index.js
it1/2026-01-13/: index.css  index.html  index.js
it1/2026-01-23/: index.js
java/: .gitignore
plantuml/: activity.puml  intro.puml  more_activity.puml
python/: anki_prefs.py
r1/: 1.11.py  1.24.py  1.27.py  1.51.py  1.74.py  1.75.py  1.82.py  6.76.py  e26.py  halveringsmetoden.py  logistisk-vekst.py  numerisk_derivasjon.py  numpy_test.py  regresjon.py  sjekke_grenseverdier.py  sympy_læring.py
r2/: R2-V25.ipynb  buelengde.hs  geogebra-test.ipynb
rust/endelay/: Cargo.toml  readme.md
rust/endelay/src/: db.rs  main.rs
(+279 files in other folders)
