[package]
name = "endelay"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
quick-xml = { version = "0.37.5", features = ["serialize"] }
reqwest = { version = "0.12.23", features = ["blocking"] }
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["serde-human-readable"] }
